hphp/hack/test/typecheck/this_tparam_static.php.exp
File "this_tparam_static.php", line 13, characters 19-22:
The type "this" cannot be used as a constraint on a classes generic, or as the type of a static member variable (Naming[2043])
